schema/testdata/validation_actions_update_no_unique_input/schema.keel
model Person {
    fields {
        name Text
    }
    operations {
        update updateName() with (name)
    }
}